objects/Analysis_Report__c.object
<CustomObject>
    <description>CAN Analysis Result
The manufacturer will send the analysis results about complaints back to the MDR team. A record of this object is created automatically everytime, when feedback is pulled out of CAN.
FDA Analysis Result
Everytime the eMDR tool sends back feedback from the FDA a new record is created.</description>
    <fields>
        <fullName>EMDR_Status__c</fullName>
        <description>Status of EMDR in downstream system. Set by automation - keep read only for non-admin profiles.</description>
        <label>EMDR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewed</fullName>
                    <label>EMDR Reviewed</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>EMDR Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <label>EMDR Rejected</label>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                    <label>EMDR Deleted</label>
                </value>
                <value>
                    <fullName>Rolledback</fullName>
                    <label>EMDR Rolledback</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <label>EMDR Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>additional_manufacturer_narrative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>pulled from CAN into SFDC</description>
        <label>Additional Manufacturer Narrative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>analysis_results__c</fullName>
        <description>3500a Question H10.  Brief Results of Analysis from MFG - Additional Manufacturer Narrative in 3500a</description>
        <label>Analysis Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>complaint__c</fullName>
        <description>Linkage to initial complaint</description>
        <label>Complaint</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>complaint__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CardioMessenger Report, Out Of Service Report, Programmer Report, Revision Report, OUS/OEM Report, Returned Product Report, CardioMessenger Report, General Report, Out Of Service Report, Programmer Report, Revision Report</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>complaint__c</referenceTo>
        <relationshipLabel>Analysis Reports</relationshipLabel>
        <relationshipName>Analysis_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>conclusion_code__c</fullName>
        <description>pulled from CAN into SFDC</description>
        <label>Conclusion Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10: Conclusion not yet available-evaluation in progress</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11: Conclusion Not Yet Available</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12: Cause Traced to Device Design</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13: Device difficult to operate</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14: Device incorrectly prepared for use or modified</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15: Device not manufactured by reporting firm</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>16: Device received unused in original package</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>18: Failure To Follow Instructions</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>19: Cause Traced to User</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20: Inconclusive-investigation in progress</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>21: Cause Traced to Infrastructure</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22: Known Inherent Risk of Device</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>23: Manufacturing Deficiency</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>24: Cause Traced to Intentional Off-Label, Unapproved, or Contraindicated Use</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25: Cause Traced to Manufacturing</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>26: Reuse of Single Use Device</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>27: Cause Traced to Training</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>31: DO NOT USE</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>44: DO NOT USE</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50: Adverse Event Related to Patient Condition</label>
                </value>
                <value>
                    <fullName>51</fullName>
                    <label>51: Cause Traced to Maintenance</label>
                </value>
                <value>
                    <fullName>54</fullName>
                    <label>54: DO NOT USE</label>
                </value>
                <value>
                    <fullName>57</fullName>
                    <label>57: Cause Traced to Labeling</label>
                </value>
                <value>
                    <fullName>61</fullName>
                    <label>61: Unintended Use Error Caused or Contributed to Event</label>
                </value>
                <value>
                    <fullName>63</fullName>
                    <label>63: Device repaired and returned</label>
                </value>
                <value>
                    <fullName>64</fullName>
                    <label>64: DO NOT USE</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <label>65: DO NOT USE</label>
                </value>
                <value>
                    <fullName>67</fullName>
                    <label>67: No Problem Detected</label>
                </value>
                <value>
                    <fullName>68</fullName>
                    <label>68: DO NOT USE</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>70: Device discarded - unable to follow-up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>date_mdr_prepared__c</fullName>
        <description>Date the person who initially created the report completed their work</description>
        <label>Date MDR prepared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_sent_to_fda__c</fullName>
        <description>Date report sent to FDA.</description>
        <label>Date sent to FDA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>device_evaluated_by_manufacturer__c</fullName>
        <label>Device Evaluated by Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Returned to Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Evaluation Summary Attached</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evaluated_by_manufacturer_explanation__c</fullName>
        <label>No Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fda_response__c</fullName>
        <label>FDA Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>passed</fullName>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>failed</fullName>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fda_response_date__c</fullName>
        <description>Date fda sent back final status response for submitted EMDR</description>
        <label>FDA Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>if_follow_up_what_type__c</fullName>
        <label>If Follow-up what Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>type_of_report__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CorrectionReport</fullName>
                    <label>Correction</label>
                </value>
                <value>
                    <fullName>AdditionalInformationReport</fullName>
                    <label>Additional Information</label>
                </value>
                <value>
                    <fullName>ResponseToFDARequest</fullName>
                    <label>Response to FDA Request</label>
                </value>
                <value>
                    <fullName>DeviceEvaluationReport</fullName>
                    <label>Device Evaluation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>manufacturer_event_description__c</fullName>
        <description>Event description sent to MFR</description>
        <label>Manufacturer event description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>method_code__c</fullName>
        <label>Method Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0: DO NOT USE</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10: Actual device involved in incident was evaluated</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11: A device from same lot of the actual device involved in incident was evaluated</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12: Device from reserve sample evaluated</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13: Device from controlled/non-released inventory evaluated</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20: Device evaluated with respect to operational environment</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22: Computer software performance tests conducted</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>23: Electrical tests performed</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>26: Mechanical tests performed</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>27: Mechanical tests, dynamic - fatigue test</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>28: Mechanical tests, static - tension or compression failure</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>34: Performed test to determine if incident was the result of interaction with another device(s)</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <label>35: User-device interface test performed</label>
                </value>
                <value>
                    <fullName>36</fullName>
                    <label>36: Analysis of labeling performed</label>
                </value>
                <value>
                    <fullName>37</fullName>
                    <label>37: Photographic images made during evaluation</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>38: Visual examination</label>
                </value>
                <value>
                    <fullName>39</fullName>
                    <label>39: Chemical tests e.G. Corrosion, reaction</label>
                </value>
                <value>
                    <fullName>51</fullName>
                    <label>51: DO NOT USE</label>
                </value>
                <value>
                    <fullName>74</fullName>
                    <label>74: DO NOT USE</label>
                </value>
                <value>
                    <fullName>77</fullName>
                    <label>77: DO NOT USE</label>
                </value>
                <value>
                    <fullName>82</fullName>
                    <label>82: Environmental tests, temperature, humidity and vibration</label>
                </value>
                <value>
                    <fullName>83</fullName>
                    <label>83: Pathological evaluation of returned device (i.E. Vascular grafts, heart valves, etc.)</label>
                </value>
                <value>
                    <fullName>84</fullName>
                    <label>84: Optical tests of all specifications performed</label>
                </value>
                <value>
                    <fullName>89</fullName>
                    <label>89: Filter testing</label>
                </value>
                <value>
                    <fullName>133</fullName>
                    <label>133: DO NOT USE</label>
                </value>
                <value>
                    <fullName>3261</fullName>
                    <label>3261: Acoustic energy testing</label>
                </value>
                <value>
                    <fullName>3262</fullName>
                    <label>3262: Acoustic noise testing</label>
                </value>
                <value>
                    <fullName>3263</fullName>
                    <label>3263: Actual device not evaluated</label>
                </value>
                <value>
                    <fullName>3264</fullName>
                    <label>3264: Agent contamination testing</label>
                </value>
                <value>
                    <fullName>3265</fullName>
                    <label>3265: Agglutination testing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>result_code__c</fullName>
        <label>Result Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0: DO NOT USE</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10: DO NOT USE</label>
                </value>
                <value>
                    <fullName>71</fullName>
                    <label>71: DO NOT USE</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100: DO NOT USE</label>
                </value>
                <value>
                    <fullName>102</fullName>
                    <label>102: Incompatible Component/ Accessory</label>
                </value>
                <value>
                    <fullName>104</fullName>
                    <label>104: Software Problem Identified</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>110: Design Error</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>111: Packaging Problem Identified</label>
                </value>
                <value>
                    <fullName>113</fullName>
                    <label>113: Interface Design Error</label>
                </value>
                <value>
                    <fullName>114</fullName>
                    <label>114: Operational Problem Identified</label>
                </value>
                <value>
                    <fullName>115</fullName>
                    <label>115: Maintenance Problem Identified</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120: Electrical Problem Identified</label>
                </value>
                <value>
                    <fullName>121</fullName>
                    <label>121: Short Circuit</label>
                </value>
                <value>
                    <fullName>122</fullName>
                    <label>122: Open Circuit</label>
                </value>
                <value>
                    <fullName>131</fullName>
                    <label>131: Energy Storage System Problem</label>
                </value>
                <value>
                    <fullName>134</fullName>
                    <label>134: DO NOT USE</label>
                </value>
                <value>
                    <fullName>133</fullName>
                    <label>133: End of life - expected</label>
                </value>
                <value>
                    <fullName>135</fullName>
                    <label>135: Degradation Problem Identified</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>140: Wear Problem</label>
                </value>
                <value>
                    <fullName>142</fullName>
                    <label>142: Biological Contamination</label>
                </value>
                <value>
                    <fullName>143</fullName>
                    <label>143: Inadequate quality assurance/control</label>
                </value>
                <value>
                    <fullName>144</fullName>
                    <label>144: Insulation Problem Identified</label>
                </value>
                <value>
                    <fullName>145</fullName>
                    <label>145: Lubrication Problem Identified</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>150: Labeling and Instructions for Use/Maintenance</label>
                </value>
                <value>
                    <fullName>154</fullName>
                    <label>154: Inadequate Labelling and/or Instructions for Use</label>
                </value>
                <value>
                    <fullName>156</fullName>
                    <label>156: Incorrect Labeling and/or Instructions for Use</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>160: Package insert information inadequate/incorrect</label>
                </value>
                <value>
                    <fullName>170</fullName>
                    <label>170: Manufacturing Process Problem Identified</label>
                </value>
                <value>
                    <fullName>171</fullName>
                    <label>171: Packaging Compromised</label>
                </value>
                <value>
                    <fullName>174</fullName>
                    <label>174: Material and/or Chemical Problem Identified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>type_of_report__c</fullName>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow up report</fullName>
                </value>
                <value>
                    <fullName>Combined initial and follow up</fullName>
                </value>
                <value>
                    <fullName>final report</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Analysis Result</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Analysis Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analysis Results</pluralLabel>
    <recordTypes>
        <fullName>CAN_Analysis_Report</fullName>
        <active>true</active>
        <description>Feedback from CAN</description>
        <label>CAN Analysis Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>FDA_EMDR_Response</fullName>
        <active>true</active>
        <description>Response to EMDR submission</description>
        <label>FDA EMDR Response</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Explanation_required</fullName>
        <active>true</active>
        <description>This validation rule sets the Explanation field as required, if &quot;no&quot; was selecetd at the picklist &quot;Device Evaluation by Manufacturer&quot;.</description>
        <errorConditionFormula>IF(
AND(
TEXT( device_evaluated_by_manufacturer__c ) = &quot;No&quot;, 
LEN( evaluated_by_manufacturer_explanation__c ) = 0), True, False)</errorConditionFormula>
        <errorDisplayField>evaluated_by_manufacturer_explanation__c</errorDisplayField>
        <errorMessage>Please enter an Explanation</errorMessage>
    </validationRules>
</CustomObject>